misc/k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learner-report-cs-frontend-service
  namespace: learner-report
  labels:
    app: learner-report-cs-frontend
spec:
  selector:
    app: learner-report-cs-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: LoadBalancer
